--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,27 @@
 [versions]
 agp = "8.6.0"
 firebaseAuth = "23.5.0"
-firebaseBom = "33.2.0"
+firebaseBom = "33.3.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
-activity = "1.9.1"
+activity = "1.9.2"
 constraintlayout = "2.1.4"
 googleGmsGoogleServices = "4.4.2"
-firebaseFirestore = "25.0.0"
-firebaseMessaging = "24.0.0"
-navigationFragment = "2.7.7"
-navigationUi = "2.7.7"
+firebaseFirestore = "25.1.0"
+firebaseMessaging = "24.0.1"
+navigationFragment = "2.8.0"
+navigationUi = "2.8.0"
 kotlin = "2.0.20"
 coreKtx = "1.13.1"
+firebaseAuthKtx = "23.0.0"
 
 [libraries]
 com-google-firebase-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
-firebase-auth = { module = "com.google.firebase:firebase-auth" }
+firebase-auth = { module = "com.google.firebase:firebase-auth-ktx"}
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 google-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 google-firebase-auth = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuth" }
@@ -36,6 +37,7 @@ firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
