--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 12 16:20:08 IST 2024
-sdk.dir=C\:\\Users\\bhara\\AppData\\Local\\Android\\Sdk
+#Fri Sep 13 07:41:36 IST 2024
+sdk.dir=C\:\\Users\\Bharath\\AppData\\Local\\Android\\Sdk
