--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,8 +17,10 @@ navigationUi = "2.8.0"
 kotlin = "2.0.20"
 coreKtx = "1.13.1"
 firebaseAuthKtx = "23.0.0"
+androidxActivity = "1.8.0"
 
 [libraries]
+androidxActivity = { module = "androidx.activity:activity-ktx"}
 com-google-firebase-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-auth = { module = "com.google.firebase:firebase-auth-ktx"}
