--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Sep 13 07:41:36 IST 2024
-sdk.dir=C\:\\Users\\Bharath\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\bhara\\AppData\\Local\\Android\\Sdk
