--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ coreKtx = "1.13.1"
 firebaseAuthKtx = "23.0.0"
 androidxActivity = "1.8.0"
 playServicesWearable = "18.2.0"
+firebaseDatabaseKtx = "21.0.0"
 
 [libraries]
 androidxActivity = { module = "androidx.activity:activity-ktx"}
@@ -43,6 +44,7 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
 play-services-wearable = { group = "com.google.android.gms", name = "play-services-wearable", version.ref = "playServicesWearable" }
+firebase-database-ktx = { group = "com.google.firebase", name = "firebase-database-ktx", version.ref = "firebaseDatabaseKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
